--- a/build
+++ b/build
@@ -1,7 +1,21 @@
 #!/usr/bin/env bash
+# Flashable zip builder
+# Copyright (C) 2018-2019, VR25 @ xda-developers
+# License: GPL V3+
 
 echo
+get_value() { sed -n "s/^$1=//p" module.prop; }
+set_value() { sed -i "s/^$1=.*/$1=$2/" module.prop; }
+
 cd ${0%/*} 2>/dev/null
+
+version=$(grep '\*\*.*\(.*\)\*\*' README.md | head -n1 | sed 's/\*\*//; s/ .*//')
+
+versionCode=$(grep '\*\*.*\(.*\)\*\*' README.md | head -n1 | sed 's/\*\*//g; s/.* //' | tr -d ')' | tr -d '(')
+
+set_value version $version
+set_value versionCode $versionCode
+
 mkdir -p .releases
-get_prop() { sed -n "s/^$1=//p" module.prop; }
-zip -r9u .releases/$(get_prop id)-$(get_prop version).zip * .gitattributes .gitignore | grep . && echo
+
+zip -r9u .releases/$(get_value id)-$(get_value version).zip * .gitattributes .gitignore | grep . && echo
