**2019.2.27 (201902270)** - Advanced and assisted charging voltage control. Refer to README.md or `acc --help` for details. - Automatically unset nonworking charging switch (fallback to cycling through all). - Daily Job Scheduler (djs) -- run `djs` or refer to its README.md to learn how to schedule commands, profiles, and even entire scripts. That's a standalone Magisk module. - Enhanced debugging tools (e.g., `acc -x|--xtrace <other option(s)>`) - Flexible framework and easy installer for app developers - Log monitoring (`acc -L`) - Major fixes and optimizations - On demand charging control files tester - Reset config with `acc -s r`. - Self-upgrade (enabled by default, virtually no impact on mobile data - acc zips weigh way less than 100 kilobytes) - Updated documentation -- added troubleshooting section and more. - Updated links and default config. - When persistent verbose is off, volatile verbose is generated (`/dev/acc/acc-daemon-*.log`). - Workaround for Magisk service.sh bug (scrip not executed)

--- a/build
+++ b/build
@@ -18,4 +18,4 @@ set_value versionCode $versionCode
 
 mkdir -p .releases
 
-zip -r9u .releases/$(get_value id)-$(get_value version).zip * .gitattributes .gitignore | grep . && echo
+zip -r9u .releases/$(get_value id)-$(get_value versionCode).zip * .gitattributes .gitignore | grep . && echo
