--- a/acc/acc.conf
+++ b/acc/acc.conf
@@ -1,4 +1,4 @@
-versionCode=201906230
+versionCode=201906300
 capacity=0,60,70-80
 capacityOffset=+0
 capacitySync=false
@@ -6,7 +6,7 @@ temperature=40-45_90
 coolDownRatio=
 resetBsOnPause=true
 resetBsOnUnplug=false
-loopDelay=10
+loopDelay=15
 chargingSwitch=
 applyOnBoot=
 applyOnPlug=
@@ -16,3 +16,4 @@ rebootOnUnplug=
 chargingOnOffDelay=1
 language=en
 wakeUnlock=
+prioritizeBattIdleMode=false
